<resources>
    <string name="app_name">Chat App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="select_photo">Select Photo</string>
    <string name="full_name">Full Name</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="sent_message">sent message</string>
    <string name="received_message">received message</string>
    <string name="back_to_registration">Back to registration</string>
    <string name="latest_message">Latest Message</string>
    <string name="no_new_messages">no new messages</string>
    <string name="no_recent_messages">No Recent Messages</string>
    <string name="turn_off_on_notifications">Turn off/on notifications</string>
    <string name="notification_image">notification image</string>
    <string name="change_color">change color</string>
    <string name="change_chat_color">Change chat color</string>
</resources>