<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity" >

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/username_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/username" />

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/email_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/username_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/username_editText_registration"
        android:autofillHints="@string/email" />

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/password_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/email_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_registration"
        android:autofillHints="@string/password" />

    <Button
        android:background="@drawable/rounded_button"
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/password_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_registration" />

    <TextView
        android:id="@+id/already_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/have_account"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>