<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/teal_200"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".registration.RegisterActivity"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/selectphoto_button_register"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_select_photo_button"
        android:text="@string/select_photo"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        app:civ_border_width="4dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_register"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_button_register"
        app:layout_constraintTop_toTopOf="@+id/selectphoto_button_register"/>

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/username_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:hint="@string/username"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectphoto_button_register"
        android:autofillHints="@string/username" />

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/email_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/username_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/username_editText_registration"
        android:autofillHints="@string/email" />

    <EditText
        android:background="@drawable/rounded_edittext_register_login"
        android:id="@+id/password_editText_registration"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/email_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_registration"
        android:autofillHints="@string/password" />

    <Button
        android:background="@drawable/rounded_button"
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_registration"
        app:layout_constraintStart_toStartOf="@+id/password_editText_registration"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_registration" />

    <TextView
        android:id="@+id/already_have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/have_account"
        android:textColorHint="@color/gray"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>