<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/notification_image_activity_settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_notifications_24px"
        android:contentDescription="@string/notification_image" />

    <TextView
        android:id="@+id/notification_text_activity_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/turn_off_on_notifications"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/notification_image_activity_settings"
        app:layout_constraintStart_toEndOf="@+id/notification_image_activity_settings"
        app:layout_constraintTop_toTopOf="@+id/notification_image_activity_settings"
        app:layout_constraintVertical_bias="0.456" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/notification_switch_activity_settings"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/notification_image_activity_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_image_activity_settings" />

    <View
        android:id="@+id/divider_settings"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_image_activity_settings" />

    <ImageView
        android:id="@+id/change_color_image_settings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_settings"
        app:srcCompat="@drawable/ic_color_lens_24px"
        android:contentDescription="@string/change_color" />

    <TextView
        android:id="@+id/change_color_text_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/change_chat_color"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/change_color_image_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_color_image_settings"
        app:layout_constraintTop_toTopOf="@+id/change_color_image_settings" />

    <View
        android:id="@+id/div_container_change_color_settings"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_settings" />


</androidx.constraintlayout.widget.ConstraintLayout>